--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": "eslint:recommended",
-  "env": {
-    "node": true,
-    "es6": true
-  },
+  "extends": "xo-space/esnext",
   "rules": {
     "no-console": ["warn"]
   }
